# OpenGL-Renderer

./: .gitignore  CMakeLists.txt  ISSUES.md  Makefile  README.md  ROADMAP.md  SCOPE.md
docs/: Doxyfile  README.md  custom.css  footer.html
include/: Utils.hpp
include/App/: Application.hpp  BaseLayer.hpp  Colors.hpp  InputConfig.hpp  Scene.hpp  TestLayer.hpp  TestScene.hpp
include/Core/: Application.hpp  Camera.hpp  Colors.hpp  Event.hpp  EventHandler.hpp  Event_Handler.hpp  InputEvents.hpp  Layer.hpp  Light.hpp  Lights.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  RenderContext.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  Specifications.hpp  Texture.hpp  Window.hpp
include/Demo/: InputConfig.hpp  LightDemoLayer.hpp  LightDemoScene.hpp  MultiCameraDemoScene.hpp  OrthoDemoScene.hpp
include/Forge/: Camera.hpp  Colors.hpp  Engine.hpp  Event.hpp  EventHandler.hpp  FrameContext.hpp  InputEvents.hpp  Keys.hpp  Layer.hpp  Light.hpp  Lights.hpp  Material.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  Specifications.hpp  Texture.hpp  Tweens.hpp
include/glad/: gl.h
scripts/: generate_crate_textures.py
shaders/: fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  skydome_fragment.glsl  skydome_vertex.glsl  solid_color.glsl  time_color.glsl  vertex.glsl
src/: main.cpp
src/App/: Application.cpp  BaseLayer.cpp  Colors.cpp  Scene.cpp  TestLayer.cpp  TestScene.cpp
src/Core/: Application.cpp  Camera.cpp  Colors.cpp  EventHandler.cpp  Event_Handler.cpp  Lights.cpp  Material.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  Texture.cpp
src/Demo/: LightDemoLayer.cpp  LightDemoScene.cpp  MultiCameraDemoScene.cpp  OrthoDemoScene.cpp
src/Forge/: Camera.cpp  Colors.cpp  Engine.cpp  EventHandler.cpp  Lights.cpp  Material.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  Texture.cpp
test/: test_camera.cpp  test_colors.cpp  test_keys.cpp  test_lights.cpp  test_mesh.cpp  test_model.cpp
